--- a/index.html
+++ b/index.html
@@ -11,35 +11,63 @@
 <style>
 body {
   margin: 0;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   background: #0e0e0e;
   color: white;
 }
 
+/* Основен контейнер */
 #container {
   display: grid;
   grid-template-columns: 2fr 1fr;
   height: 100vh;
 }
 
+/* Модел */
 model-viewer {
   width: 100%;
   height: 100%;
   background: #1a1a1a;
 }
 
+/* Информация */
 #info {
   padding: 20px;
   overflow-y: auto;
   background: #121212;
 }
 
+/* Hotspot бутони */
 button.hotspot {
   background: #ff9800;
   border: none;
   border-radius: 50%;
   width: 18px;
   height: 18px;
+  cursor: pointer;
+}
+
+/* Видео по подразбиране скрито */
+#video {
+  display: none;
+  margin-top: 10px;
+}
+
+/* --- Responsive стилове за телефони --- */
+@media (max-width: 768px) {
+  #container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+    height: auto;
+  }
+
+  model-viewer {
+    height: 60vh;
+  }
+
+  #info {
+    height: 40vh;
+  }
 }
 </style>
 </head>
@@ -48,41 +76,41 @@ button.hotspot {
 
 <div id="container">
 
-<model-viewer
-  src="Meshy_AI_Bulgarian_cherry_cann_0205155740_texture.glb"
-  camera-controls
-  auto-rotate
-  shadow-intensity="1">
+  <model-viewer
+    src="Meshy_AI_Bulgarian_cherry_cann_0205155740_texture.glb"
+    camera-controls
+    auto-rotate
+    shadow-intensity="1">
 
-  <!-- Hotspot 1 -->
-  <button class="hotspot"
-    slot="hotspot-1"
-    data-position="0.2m 0.1m 0.1m"
-    data-normal="0 1 0"
-    onclick="showInfo('barrel')">
-  </button>
+    <!-- Hotspot 1 -->
+    <button class="hotspot"
+      slot="hotspot-1"
+      data-position="0.2m 0.1m 0.1m"
+      data-normal="0 1 0"
+      onclick="showInfo('barrel')">
+    </button>
 
-  <!-- Hotspot 2 -->
-  <button class="hotspot"
-    slot="hotspot-2"
-    data-position="-0.2m 0.05m 0"
-    data-normal="0 1 0"
-    onclick="showInfo('bands')">
-  </button>
+    <!-- Hotspot 2 -->
+    <button class="hotspot"
+      slot="hotspot-2"
+      data-position="-0.2m 0.05m 0"
+      data-normal="0 1 0"
+      onclick="showInfo('bands')">
+    </button>
 
-</model-viewer>
+  </model-viewer>
 
-<div id="info">
-  <h2 id="title">Избери част</h2>
-  <p id="text">Кликни върху точките на модела.</p>
+  <div id="info">
+    <h2 id="title">Избери част</h2>
+    <p id="text">Кликни върху точките на модела.</p>
 
-  <div id="video" style="display:none;">
-    <iframe width="100%" height="200"
-      src="https://www.youtube.com/embed/ТВОЕТО_ID"
-      allowfullscreen>
-    </iframe>
+    <div id="video">
+      <iframe width="100%" height="200"
+        src="https://www.youtube.com/embed/ТВОЕТО_ID"
+        allowfullscreen>
+      </iframe>
+    </div>
   </div>
-</div>
 
 </div>
 
