--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="bg">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Черешово топче – интерактивен модел</title>
 
 <script type="module"
@@ -9,55 +10,56 @@
 </script>
 
 <style>
+/* --- Общи стилове --- */
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0e0e0e;
-  color: white;
+  background: #0b0b0b;
+  color: #eaeaea;
+  font-family: system-ui, sans-serif;
 }
 
-/* Основен контейнер */
-#container {
+#app {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2.2fr 1fr;
   height: 100vh;
+  overflow: hidden;
 }
 
-/* Модел */
 model-viewer {
   width: 100%;
   height: 100%;
-  background: #1a1a1a;
+  background: #111;
 }
 
-/* Информация */
-#info {
-  padding: 20px;
+#panel {
+  padding: 24px;
+  background: #151515;
   overflow-y: auto;
-  background: #121212;
 }
 
-/* Hotspot бутони */
-button.hotspot {
+#panel h1 {
+  font-size: 1.6rem;
+  margin-bottom: 0.5em;
+}
+
+.hotspot {
+  width: 16px;
+  height: 16px;
   background: #ff9800;
-  border: none;
   border-radius: 50%;
-  width: 18px;
-  height: 18px;
+  border: none;
   cursor: pointer;
 }
 
-/* Видео по подразбиране скрито */
-#video {
-  display: none;
-  margin-top: 10px;
-}
-
-/* --- Responsive стилове за телефони --- */
+/* --- Responsive за телефони --- */
 @media (max-width: 768px) {
-  #container {
+  #app {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 60vh auto;
     height: auto;
   }
 
@@ -65,8 +67,13 @@ button.hotspot {
     height: 60vh;
   }
 
-  #info {
+  #panel {
     height: 40vh;
+    padding: 16px;
+  }
+
+  #panel h1 {
+    font-size: 1.3rem;
   }
 }
 </style>
@@ -74,7 +81,7 @@ button.hotspot {
 
 <body>
 
-<div id="container">
+<div id="app">
 
   <model-viewer
     src="Meshy_AI_Bulgarian_cherry_cann_0205155740_texture.glb"
@@ -100,11 +107,11 @@ button.hotspot {
 
   </model-viewer>
 
-  <div id="info">
-    <h2 id="title">Избери част</h2>
+  <div id="panel">
+    <h1 id="title">Избери част</h1>
     <p id="text">Кликни върху точките на модела.</p>
 
-    <div id="video">
+    <div id="video" style="display:none;">
       <iframe width="100%" height="200"
         src="https://www.youtube.com/embed/ТВОЕТО_ID"
         allowfullscreen>
